syntax = "proto3";

package protocol;

service Dusty {
    rpc Setup (SetupRequest) returns (RegularReply) {}
}

message RegularReply {
    repeated string messages = 1;
    string error = 2;
}

message SetupRequest {
    string username = 1;
    string specsRepo = 2;
    int32 vmMemory = 3;
    string sshKeyPath = 4;
    bool update = 5;
}